--- a/my-app/src/App.module.css
+++ b/my-app/src/App.module.css
@@ -1,4 +1,72 @@
-.container {
+.content_wrapper {
+  display: flex;
+}
+.main_content {
   height: 100vh;
   width: 100vw;
+}
+.wrapper {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+}
+.loading_text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.5em;
+  width: 200px;
+  text-align: center;
+}
+.sidebar {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: rgb(20, 0, 85);
+  width: 100vw;
+  height: 100vh;
+  transform: translateX(100%);
+  transition: transform 250ms;
+}
+.sidebar_open {
+  transform: translateX(0);
+}
+.navigation_btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: white;
+  font-size: 2em;
+  transition: transform 250ms;
+  z-index: 100;
+}
+.navigation_btn:hover,
+.navigation_btn:focus {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.open_btn {
+  right: 10;
+}
+.open_btn_moved {
+  right: 410px;
+}
+
+@media (min-width: 1000px) {
+  .main_content {
+    width: calc(100vw - 400px);
+  }
+  .main_content_full {
+    width: 100vw;
+  }
+  .sidebar {
+    position: static;
+    width: 400px;
+    background-color: rgb(14, 0, 60);
+  }
+  .sidebar_close {
+    display: none;
+  }
 }
