--- a/my-app/frontend/src/App.module.css
+++ b/my-app/frontend/src/App.module.css
@@ -6,18 +6,24 @@
   height: 100vh;
   width: 100vw;
 } */
+.fallback_wrapper {
+  width: 100vw;
+  height: 100vh;
+}
 .wrapper {
-  position: relative;
+  position: absolute;
   width: 100vw;
   height: 100vh;
   background-color: black;
+  z-index: 10000;
 }
 .loading_text {
+  color: white;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 1.5em;
-  width: 200px;
+  width: 300px;
   text-align: center;
 }
