--- a/my-app/frontend/src/components/Sidebar/Statistics.module.css
+++ b/my-app/frontend/src/components/Sidebar/Statistics.module.css
@@ -14,8 +14,8 @@
 .navigation_item {
   list-style: none;
   border-radius: 50%;
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,4 +35,11 @@
 .nav_icon {
   width: 60%;
   height: 60%;
+}
+
+@media (min-width: 400px) {
+  .navigation_item {
+    width: 60px;
+    height: 60px;
+  }
 }
