--- a/my-app/frontend/src/components/Sidebar/Sidebar.module.css
+++ b/my-app/frontend/src/components/Sidebar/Sidebar.module.css
@@ -2,15 +2,28 @@
   width: 100%;
   height: 100%;
 }
+/* .navigation_btn {
+  width: 20px;
+  position: absolute;
+  top: calc(50% + 50px);
+  left: 0;
+  color: white;
+  font-size: 2em;
+  transform: translateY(-25px);
+  z-index: 100;
+} */
+
 .navigation_btn {
   position: absolute;
   top: 10px;
   right: 10px;
   color: white;
   font-size: 2em;
-  /* transform: translateX(0);
-  transition: transform 250ms; */
   z-index: 100;
+}
+.nav_close {
+  width: 20px;
+  top: 50px;
 }
 /* .navigation_btn_moved {
   right: 410px;
@@ -34,7 +47,12 @@
 .sidebar_open {
   transform: translateX(0);
 }
-
+@media (min-width: 400px) {
+  .nav_close {
+    width: 30px;
+    top: 60px;
+  }
+}
 @media (min-width: 1000px) {
   .sidebar_container {
     max-width: 400px;
