dummy logo added and resources page functionality

--- a/my-app/frontend/src/App.module.css
+++ b/my-app/frontend/src/App.module.css
@@ -27,3 +27,16 @@
   width: 300px;
   text-align: center;
 }
+
+/* .info_section {
+  position: absolute;
+  top: 7px;
+  left: -7px;
+}
+
+@media (min-width: 350px) {
+  .info_section {
+    top: 15px;
+    left: 0;
+  }
+} */
