--- a/my-app/frontend/src/index.css
+++ b/my-app/frontend/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Monitorica';
+  src: local('Monitorica'),
+    url('./resources/fonts/Monitorica-Rg.otf') format('truetype');
+  font-weight: regular;
+}
+
 html,
 body {
   margin: 0;
@@ -7,12 +14,5 @@ body {
   box-sizing: border-box;
   overflow: hidden;
   background-color: black;
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Monitorica, 'Roboto', 'sans-serif';
 }
