--- a/my-app/frontend/src/components/Sidebar/Sidebar.module.css
+++ b/my-app/frontend/src/components/Sidebar/Sidebar.module.css
@@ -43,6 +43,7 @@
   height: 100vh;
   transform: translateX(100%);
   transition: transform 150ms;
+  z-index: 2;
 }
 .sidebar_open {
   transform: translateX(0);
