--- a/my-app/frontend/src/components/InfoSection.module.css
+++ b/my-app/frontend/src/components/InfoSection.module.css
@@ -2,19 +2,17 @@
   display: flex;
   max-width: 130px;
   align-items: center;
-  /* width: 130px; */
 }
 .info_resources {
   color: white;
-  transform: scale(1);
-  transition: transform 250ms;
+  transition: color 250ms;
   font-size: 0.75em;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
 .info_resources:hover,
 .info_resources:focus {
-  transform: scale(1.05);
+  color: rgb(172, 172, 172);
   cursor: pointer;
 }
 
@@ -40,12 +38,14 @@
   position: absolute;
   top: 0;
   right: 0;
+  bottom: 0;
   width: 100vw;
-  height: 100vh;
+  height: auto;
   background-color: rgb(0, 0, 0);
   transform: translateY(-100%);
   transition: transform 250ms;
   z-index: 101;
+  overflow-y: scroll;
 }
 .resource_page_open {
   transform: translateY(0%);
@@ -57,6 +57,28 @@
   z-index: 1;
 }
 
+.container {
+  padding: 1em;
+  color: white;
+  width: 80%;
+  max-width: 500px;
+  margin: auto;
+  text-align: center;
+  padding-bottom: 0;
+  line-height: 1.6;
+}
+.container:last-child {
+  padding-bottom: 1em;
+}
+.link {
+  text-decoration: none;
+  color: #a7caed;
+  transition: color 250ms;
+}
+.link:focus,
+.link:hover {
+  color: #6d8298;
+}
 @media (min-width: 500px) {
   .info_section {
     top: 15px;
@@ -66,9 +88,11 @@
     font-size: 1.1em;
   }
   .info_wrapper {
-    /* display: flex; */
     max-width: 170px;
-    /* align-items: center; */
-    /* width: 130px; */
+  }
+}
+@media (min-width: 800px) {
+  .container {
+    font-size: 1.1em;
   }
 }
