--- a/my-app/frontend/src/components/Sidebar/SidebarContent.module.css
+++ b/my-app/frontend/src/components/Sidebar/SidebarContent.module.css
@@ -2,12 +2,14 @@
   width: 100%;
   height: 100%;
 }
+.content_container {
+  height: auto;
+}
 .navigation {
   height: 50px;
   display: flex;
   justify-content: space-around;
   border-radius: 7px;
-  /* background-color: rgb(45, 130, 183); */
   background-color: rgb(13, 0, 60);
 }
 .nav_icon_wrapper {
