--- a/my-app/frontend/src/components/Sidebar/Statistics.module.css
+++ b/my-app/frontend/src/components/Sidebar/Statistics.module.css
@@ -1,6 +1,8 @@
 .wrapper {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 50px);
+  overflow-y: scroll;
+  z-index: 2;
 }
 .navigation {
   padding: 0;
@@ -8,8 +10,6 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* margin-top: 2em; */
-  /* background-color: rgb(13, 0, 60); */
 }
 .navigation_item {
   list-style: none;
